syntax = "proto3";

package pb;

import "google/protobuf/empty.proto";
import "api.proto";
import "card.proto";  

option go_package = "MamangRust/paymentgatewaygrpc/internal/pb";

message FindAllSaldoRequest {
    int32 page = 1;
    int32 page_size = 2;
    string search = 3;
}

message FindByIdSaldoRequest {
    int32 saldo_id = 1;
}

message CreateSaldoRequest{
    string card_number = 1;
    int32 total_balance = 2;
}

message UpdateSaldoRequest{
    int32 saldo_id = 1;
    string card_number = 2;
    int32 total_balance = 3;
}

message SaldoResponse {
  int32 saldo_id = 1;
  string card_number = 2;
  int32 total_balance = 3;
  string withdraw_time = 4;
  int32 withdraw_amount = 5;
  string created_at = 6;
  string updated_at = 7;
}

message ApiResponseSaldo {
    string status = 1;
    string message = 2;
    SaldoResponse data = 3;
}

message ApiResponsesSaldo{
    string status = 1;
    string message = 2;
    repeated SaldoResponse data = 3;
}

message ApiResponseSaldoDelete{
    string status = 1;
    string message = 2;
}

message ApiResponsePaginationSaldo {
    string status = 1;
    string message = 2;
    repeated SaldoResponse data = 3; 
    PaginationMeta pagination = 4;
}

service SaldoService{
   rpc FindAllSaldo(FindAllSaldoRequest) returns (ApiResponsePaginationSaldo) {}
   rpc FindByIdSaldo(FindByIdSaldoRequest) returns (ApiResponseSaldo) {}
   rpc FindByCardNumber(pb.FindByCardNumberRequest) returns (ApiResponseSaldo) {}  
   rpc FindByActive(google.protobuf.Empty) returns (ApiResponsesSaldo) {}
   rpc FindByTrashed(google.protobuf.Empty) returns (ApiResponsesSaldo) {}
   rpc CreateSaldo(CreateSaldoRequest) returns (ApiResponseSaldo) {}
   rpc UpdateSaldo(UpdateSaldoRequest) returns (ApiResponseSaldo) {}
   rpc TrashSaldo(FindByIdSaldoRequest) returns (ApiResponseSaldo) {}
   rpc RestoreSaldo(FindByIdSaldoRequest) returns (ApiResponseSaldo) {}
   rpc DeleteSaldoPermanent(FindByIdSaldoRequest) returns (ApiResponseSaldoDelete) {}
}
